PCHR-1858: Show Insurance Plan Type Label on Export/Summary of Contracts
Contract summary was using insurance plan type value instead of label, so added
join in CRM_Hrjobcontract_BAO_HRJobContractRevision::buildFullDetailsQuery() to
bring plan label from database and use it on summary view.

Export of contract data was also showing option value instead of label for
insurance plan type. Added health_<field_name>_export methods to
CRM_Hrjobcontract_ExportImportValuesConverter class to show option value labels
instead.

--- a/hrjobcontract/views/contractSummary.html
+++ b/hrjobcontract/views/contractSummary.html
@@ -85,7 +85,7 @@
                     <div class="col-sm-6">
                         <p class="form-control-static">
                                     <span ng-if="health.plan_type || health.provider" class="subfield">
-                                        <span ng-if="health.plan_type">{{health.plan_type}} </span>
+                                        <span ng-if="health.plan_type">{{health.healthplan_type_label}} </span>
                                         <span ng-if="health.provider">(with <span hrjc-contact="health.provider" hrjc-contact-link="true"></span>)</span>
                                     </span>
                             <span ng-if="health.description" class="subfield"><strong>Description:</strong> {{health.description}}</span>
@@ -103,7 +103,7 @@
                     <div class="col-sm-6">
                         <p class="form-control-static">
                                     <span ng-if="health.plan_type_life_insurance || health.provider_life_insurance" class="subfield">
-                                        <span ng-if="health.plan_type_life_insurance">{{health.plan_type_life_insurance}} </span>
+                                        <span ng-if="health.plan_type_life_insurance">{{health.lifeplan_type_label}} </span>
                                         <span ng-if="health.provider_life_insurance">(with <span hrjc-contact="health.provider_life_insurance" hrjc-contact-link="true"></span>)</span>
                                     </span>
                             <span ng-if="health.plan_type_life_insurance" class="subfield">{{health.plan_type_life_insurance}}</span>
