--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave-report.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave-report.html
@@ -223,7 +223,9 @@
                                       {{action}}
                                     </a>
                                     <a ng-if="action !== 'cancel'" href
-                                      leave-request-popup leave-request="request" contact-id="report.contactId">
+                                      leave-request-popup leave-request="request"
+                                      leave-type="{{report.absenceTypes[request.type_id].title | lowercase}}"
+                                      contact-id="report.contactId">
                                       {{action}}
                                     </a>
                                   </li>
@@ -392,7 +394,8 @@
                                     {{action}}
                                     </a>
                                   <a ng-if="action !== 'cancel'" href
-                                    leave-request-popup leave-request="request" contact-id="report.contactId">
+                                    leave-request-popup leave-request="request"
+                                    leave-type="{{report.absenceTypes[request.type_id].title | lowercase}}" contact-id="report.contactId">
                                     {{action}}
                                   </a>
                                 </li>
@@ -484,7 +487,9 @@
                               <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu>
                                 <li ng-repeat="action in report.actionsFor(request)">
                                   <a href
-                                    leave-request-popup leave-request="request" contact-id="report.contactId">
+                                    leave-request-popup leave-request="request"
+                                    leave-type="{{report.absenceTypes[request.type_id].title | lowercase}}"
+                                    contact-id="report.contactId">
                                     {{action}}
                                   </a>
                                 </li>
