--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/request-modal/details/sickness.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/request-modal/details/sickness.html
@@ -1,13 +1,13 @@
 <div class="row">
   <div class="col-xs-12 form-horizontal">
   <hr>
-    <div class="form-group">
+    <div class="form-group">{{$ctrl.leaveRequest}}
       <label class="col-xs-4 control-label">Reason<i class="fa fa-asterisk"></i></label>
       <div class="col-xs-8">
         <div class="chr_custom-select chr_custom-select--full">
           <select
             name="reason"
-            ng-options="reason.name as reason.label for reason in $ctrl.leaveRequestReasons"
+            ng-options="reason.value as reason.label for reason in $ctrl.sicknessReasons"
             ng-model="$ctrl.leaveRequest.reason">
             <option value="">- select -</option>
           </select>
@@ -16,7 +16,7 @@
     </div>
     <div class="form-group">
       <div class="col-xs-12">
-        <div ng-repeat="document in $ctrl.leaveRequestDocuments">
+        <div ng-repeat="document in $ctrl.sicknessDocumentTypes">
           <input ng-disabled="$ctrl.isRole('owner')" required type="checkbox" value="document.value"
             ng-click="$ctrl.updateRequiredDocuments(document.value)"
             ng-selected="$ctrl.isDocumentInRequest(document.value)">
