PCHR-1381: PR update, reorganize test suites

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/request-modal/details/sickness.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/request-modal/details/sickness.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-xs-12 form-horizontal">
   <hr>
-    <div class="form-group">{{$ctrl.leaveRequest}}
+    <div class="form-group">
       <label class="col-xs-4 control-label">Reason<i class="fa fa-asterisk"></i></label>
       <div class="col-xs-8">
         <div class="chr_custom-select chr_custom-select--full">
