--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/request-modal/details/sickness.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/request-modal/details/sickness.html
@@ -17,7 +17,9 @@
     <div class="form-group">
       <div class="col-xs-12">
         <div ng-repeat="document in $ctrl.sicknessDocumentTypes">
-          <input ng-disabled="$ctrl.isRole('owner')" required type="checkbox" value="document.value"
+          <input
+            ng-disabled="$ctrl.isRole('owner')"
+            required type="checkbox" value="document.value"
             ng-click="$ctrl.updateRequiredDocuments(document.value)"
             ng-selected="$ctrl.isDocumentInRequest(document.value)">
           <span>{{document.label}}</span>
