PCHR-1381: Move required document handling to sickness request instance

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/request-modal/details/sickness.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/request-modal/details/sickness.html
@@ -20,7 +20,7 @@
           <input
             ng-disabled="$ctrl.isRole('owner')"
             required type="checkbox" value="document.value"
-            ng-click="$ctrl.updateRequiredDocuments(document.value)"
+            ng-click="$ctrl.leaveRequest.toggleDocument(document.value)"
             ng-selected="$ctrl.isDocumentInRequest(document.value)">
           <span>{{document.label}}</span>
         </div>
