*.scss - Use SCSSROOT for cross-extension references
Note: This patch was generated by running `bin/convert-scss-imports`, so it
can be dropped/recreated after merging future changes.

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_forms.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_forms.scss
@@ -1,4 +1,4 @@
-@import '../../../org.civicrm.bootstrap/scss/vendor/bootstrap/forms';
+@import 'SCSSROOT/org.civicrm.bootstrap/scss/vendor/bootstrap/forms';
 @import '../bootstrap/overrides/style/forms';
 $control-height: 30px;
 
