--- a/contactsummary/scss/contactsummary.scss
+++ b/contactsummary/scss/contactsummary.scss
@@ -1,5 +1,5 @@
-@import "../../org.civicrm.bootstrap/scss/overrides/variables";
-@import "../../org.civicrm.bootstrap/scss/vendor/bootstrap/variables";
+@import "SCSSROOT/org.civicrm.bootstrap/scss/overrides/variables";
+@import "SCSSROOT/org.civicrm.bootstrap/scss/vendor/bootstrap/variables";
 
 #tab_summary, #contact-summary {
   //display: none !important;
