--- a/org.civicrm.bootstrapcivicrm/scss/bootstrap/bootstrap.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/bootstrap/bootstrap.scss
@@ -10,6 +10,6 @@
 @import "fonts/*";
 @import "mixins/*";
 
-@import "../../../org.civicrm.bootstrap/scss/bootstrap";
+@import "SCSSROOT/org.civicrm.bootstrap/scss/bootstrap";
 @import "overrides/style/*";
 @import "components/*";
