--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_modals.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_modals.scss
@@ -1,4 +1,4 @@
-@import '../../../org.civicrm.bootstrap/scss/vendor/bootstrap/modals';
+@import 'SCSSROOT/org.civicrm.bootstrap/scss/vendor/bootstrap/modals';
 @import '../bootstrap/overrides/style/modals';
 
 .crm-container.ui-dialog {
