--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/custom-civicrm.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/custom-civicrm.scss
@@ -1,8 +1,8 @@
 @import 'variables';
 @import '../bootstrap/overrides/variables';
-@import '../../../org.civicrm.bootstrap/scss/overrides/variables';
-@import '../../../org.civicrm.bootstrap/scss/vendor/bootstrap/variables';
-@import '../../../org.civicrm.bootstrap/scss/vendor/bootstrap/mixins/*';
+@import 'SCSSROOT/org.civicrm.bootstrap/scss/overrides/variables';
+@import 'SCSSROOT/org.civicrm.bootstrap/scss/vendor/bootstrap/variables';
+@import 'SCSSROOT/org.civicrm.bootstrap/scss/vendor/bootstrap/mixins/ALL';
 @import '../bootstrap/mixins/*';
 @import '../bootstrap/fonts/*';
 @import '../bootstrap/vendor/font-awesome/variables';
