--- a/org.civicrm.styleguide/scss/styleguide.scss
+++ b/org.civicrm.styleguide/scss/styleguide.scss
@@ -1,9 +1,9 @@
-@import "../../org.civicrm.bootstrapcivicrm/scss/bootstrap/overrides/variables";
-@import "../../org.civicrm.bootstrapcivicrm/scss/bootstrap/mixins/*";
+@import "SCSSROOT/org.civicrm.bootstrapcivicrm/scss/bootstrap/overrides/variables";
+@import "SCSSROOT/org.civicrm.bootstrapcivicrm/scss/bootstrap/mixins/ALL";
 
-@import "../../org.civicrm.bootstrap/scss/overrides/variables";
-@import "../../org.civicrm.bootstrap/scss/vendor/bootstrap/variables";
-@import "../../org.civicrm.bootstrap/scss/vendor/bootstrap/mixins";
+@import "SCSSROOT/org.civicrm.bootstrap/scss/overrides/variables";
+@import "SCSSROOT/org.civicrm.bootstrap/scss/vendor/bootstrap/variables";
+@import "SCSSROOT/org.civicrm.bootstrap/scss/vendor/bootstrap/mixins";
 
 @import "mixins/*";
 
