--- a/uk.co.compucorp.civicrm.appraisals/scss/civiappraisals.scss
+++ b/uk.co.compucorp.civicrm.appraisals/scss/civiappraisals.scss
@@ -1,8 +1,8 @@
-@import "../../org.civicrm.bootstrapcivihr/scss/overrides/variables";
-@import "../../org.civicrm.bootstrapcivicrm/scss/bootstrap/overrides/variables";
-@import "../../org.civicrm.bootstrap/scss/overrides/variables";
-@import "../../org.civicrm.bootstrap/scss/vendor/bootstrap/variables";
-@import "../../org.civicrm.bootstrapcivicrm/scss/bootstrap/mixins/*";
+@import "SCSSROOT/org.civicrm.bootstrapcivihr/scss/overrides/variables";
+@import "SCSSROOT/org.civicrm.bootstrapcivicrm/scss/bootstrap/overrides/variables";
+@import "SCSSROOT/org.civicrm.bootstrap/scss/overrides/variables";
+@import "SCSSROOT/org.civicrm.bootstrap/scss/vendor/bootstrap/variables";
+@import "SCSSROOT/org.civicrm.bootstrapcivicrm/scss/bootstrap/mixins/ALL";
 
 .page-civicrm-appraisals-dashboard {
 
