--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_tag-contacts.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_tag-contacts.scss
@@ -12,3 +12,63 @@
     }
   }
 }
+
+.CRM_Tag_Form_Tag {
+  #Tag {
+    background: $crm-white;
+    box-shadow: $box-shadow;
+
+    h3 {
+      border-bottom: none;
+      background: $crm-background;
+      color: $gray-darker;
+      vertical-align: middle;
+      border: none;
+      padding: 15px 20px;
+    }
+
+    #tagtree {
+      padding: 20px;
+
+      li {
+        margin: 10px 0;
+
+        span {
+          background: none;
+        }
+
+        input[type=checkbox] {
+          display: none !important;
+
+          &:checked + span label[for]::before,
+          + span label[for]::before {
+            margin-right: 5px;
+            vertical-align: middle;
+          }
+          + span label[for]::before {
+            content: '';
+            display: inline-block;
+            width: 16px;
+            min-width: 16px;
+            height: 16px;
+            border-radius: 2px;
+            background-color: #ffffff;
+            box-shadow: inset 0 0 3px 0 rgba(0, 0, 0, 0.2);
+            border: solid 1px $crm-darker-grayblue;
+          }
+          &:checked + span label[for] {
+            position: relative;
+          }
+          &:checked + span label[for]::after {
+            @include fa-icon($font-size: 15px, $content: '\f00c', $color: $gray-darker);
+            display: inline-block;
+            position: absolute;
+            left: 2px;
+            top: 8px;
+            margin-top: -6px;
+          }
+        }
+      }
+    }
+  }
+}
