AI-28: Fixing review comments

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_tag-contacts.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_tag-contacts.scss
@@ -52,7 +52,7 @@
             min-width: 16px;
             height: 16px;
             border-radius: 2px;
-            background-color: #ffffff;
+            background-color: $crm-white;
             box-shadow: inset 0 0 3px 0 rgba(0, 0, 0, 0.2);
             border: solid 1px $crm-darker-grayblue;
           }
