--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/_variables.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/_variables.scss
@@ -7,3 +7,5 @@ $datepicker-gray-darker: #525966;
 $select2-inner-background: #f1f5f6;
 
 $contact-avatar: 90px;
+
+$crm-checkbox-shadow: inset 0 0 3px 0 rgba(0, 0, 0, 0.2);
