--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_radio-checkbox.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_radio-checkbox.scss
@@ -28,7 +28,7 @@
       min-width: 14px;
       height: 14px;
       background-color: #ffffff;
-      box-shadow: inset 0 0 3px 0 rgba(0, 0, 0, 0.2);
+      box-shadow: $crm-checkbox-shadow;
       border: solid 1px $crm-darker-grayblue;
       border-radius: 50%;
     }
@@ -59,7 +59,7 @@
       height: 16px;
       border-radius: 2px;
       background-color: #ffffff;
-      box-shadow: inset 0 0 3px 0 rgba(0, 0, 0, 0.2);
+      box-shadow: $crm-checkbox-shadow;
       border: solid 1px $crm-darker-grayblue;
     }
     &:checked + label[for] {
