--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_tag-contacts.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_tag-contacts.scss
@@ -53,7 +53,7 @@
             height: 16px;
             border-radius: 2px;
             background-color: $crm-white;
-            box-shadow: inset 0 0 3px 0 rgba(0, 0, 0, 0.2);
+            box-shadow: $crm-checkbox-shadow;
             border: solid 1px $crm-darker-grayblue;
           }
           &:checked + span label[for] {
