AI-6: Add margin before list

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_notifications.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_notifications.scss
@@ -45,6 +45,13 @@
       h1 {
         color: $gray;
       }
+
+      .notify-content {
+
+        ul {
+          margin: 0 15px;
+        }
+      }
     }
 
     &.ui-notify-message-style {
