AI-36: Adjust credit card button alignment

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_contributions.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_contributions.scss
@@ -104,9 +104,7 @@
   }
 
   .crm-link-credit-card-mode {
-    a {
-      padding: 20px 30px;
-    }
+    margin: 10px 20px 0 0;
   }
 
   #recurringPaymentBlock {
