--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_tag-contacts.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_tag-contacts.scss
@@ -94,6 +94,16 @@
       margin: 25px;
     }
   }
+
+  .listing-box {
+    max-height: 216px;
+    height: auto;
+
+    > div {
+      padding: 15px;
+      background-color: #ffffff;
+    }
+  }
 }
 
 .CRM_Tag_Form_Tag {
