AI-36: Adjust page title spacing

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_contributions.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_contributions.scss
@@ -1,3 +1,9 @@
+.page-civicrm-contribute-add {
+  #branding h1.page-title {
+    margin-bottom: 20px !important;
+  }
+}
+
 .CRM_Contribute_Form_Search {
   table {
     background: transparent;
