PCHR-1945: Revert to use bootstrap-namespace var + fixes

--- a/org.civicrm.bootstrap/scss/bootstrap.scss
+++ b/org.civicrm.bootstrap/scss/bootstrap.scss
@@ -1,12 +1,15 @@
 @import "overrides/variables";
+@import "mixins/body-namespaced";
 @import "mixins/initial-value";
 
 // Core variables and mixins
 @import "vendor/bootstrap/variables";
 @import "vendor/bootstrap/mixins";
 
-// Reset CMS and old CiviCRM style
-@import "overrides/reset/drupal";
-@import "overrides/reset/civicrm";
+#{$bootstrap-namespace} {
+  // Reset CMS and old CiviCRM style
+  @import "overrides/reset/drupal";
+  @import "overrides/reset/civicrm";
 
-@import "themes/default";
+  @import "themes/default";
+}
