--- a/org.civicrm.bootstrapcivicrm/scss/bootstrap/bootstrap.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/bootstrap/bootstrap.scss
@@ -1,14 +1,19 @@
+@import "overrides/variables";
+@import "../../../org.civicrm.bootstrap/scss/bootstrap";
+
+@import "fonts/*";
+@import "mixins/*";
+
+#{$bootstrap-namespace} {
+  @import "vendor/ui-bootstrap/ui-bootstrap";
+  @import "vendor/ui-select/ui-select";
+
+  @import "overrides/style/*";
+  @import "components/*";
+}
+
 @import "vendor/text-angular/text-angular";
 @import "vendor/angular-xeditable/angular-xeditable";
 @import "vendor/font-awesome/font-awesome";
 @import "vendor/perfect-scrollbar/main";
-@import "vendor/ui-bootstrap/ui-bootstrap";
-@import "vendor/ui-select/ui-select";
-
-@import "overrides/variables";
-@import "fonts/*";
-@import "mixins/*";
-
-@import "../../../org.civicrm.bootstrap/scss/bootstrap";
-@import "overrides/style/*";
-@import "components/*";
+@import "components/civihr-ui-select/civihr-ui-select";
