--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_contributions.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_contributions.scss
@@ -30,7 +30,7 @@
     tbody {
       tr {
         background: $crm-white;
-        border-bottom: 1px solid $crm-background;
+        // border-bottom: 1px solid $crm-background;
 
         td {
           background: $crm-white;
