--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_forms.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_forms.scss
@@ -547,7 +547,7 @@ $control-height: 30px;
     }
 
     .select2-results {
-      margin-top: 4px;
+      margin: 4px 0 0 0;
       color: $gray-darker;
 
       li {
