AI-19: Adjust new contribution elements

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_accordions.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_accordions.scss
@@ -12,6 +12,7 @@
     background: $crm-accordion-header-color !important;
     color: $gray-darker;
     font-weight: normal !important;
+    font-size: 13px !important;
 
     &::before {
       @include fa-icon(.8em);
