--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_contributions.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_contributions.scss
@@ -128,6 +128,14 @@
     td {
       padding: 10px 30px !important;
 
+      &:first-child {
+        padding-right: 0 !important;
+      }
+
+      &:nth-child(2) {
+        padding-left: 0 !important;
+      }
+
       .required {
         &:after {
           display: none;
@@ -151,6 +159,10 @@
     &.label {
       line-height: 1.5em;
     }
+
+    label {
+      font-family: $font-family-base;
+    }
   }
 
   .crm-contribution-form-block-soft_credit_to,
@@ -162,6 +174,12 @@
     label {
       position: relative;
       top: 7px;
+    }
+  }
+
+  .crm-contribution-form-block-payment_instrument_id {
+    .helpicon {
+      left: 0;
     }
   }
 
