--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_new-activity.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_new-activity.scss
@@ -6,6 +6,7 @@
 
     .crm-form-block > .crm-submit-buttons {
       margin: 0 0 20px 0 !important;
+      border-top: none;
 
       > .crm-button {
         margin-left: 0 !important;
@@ -66,6 +67,19 @@
       left: -2px;
       border-top-right-radius: 2px;
       border-bottom-right-radius: 2px;
+    }
+
+    .crm-accordion-wrapper {
+      margin-left: -15px;
+      margin-right: -15px;
+    }
+  }
+
+  #branding {
+    h1 {
+      &.page-title {
+        margin-bottom: 27px !important;
+      }
     }
   }
 }
