AI-38: Reduce space between lines

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/_detail.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/_detail.scss
@@ -74,6 +74,16 @@
         height: 50px;
         line-height: 50px;
 
+        &:first-child {
+          height: 40px;
+          line-height: normal;
+
+          th {
+            padding-bottom: 0;
+            padding-top: 15px;
+          }
+        }
+
         th {
           color: $gray-darker;
           text-transform: capitalize;
