--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_buttons.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_buttons.scss
@@ -333,3 +333,12 @@ $button-border-radius: 2px;
     }
   }
 }
+
+a {
+  &.button  {
+    i {
+      margin-top: -4px;
+      margin-right: 10px;
+    }
+  }
+}
