--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_contributions.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_contributions.scss
@@ -22,6 +22,11 @@
       td {
         padding: 10px 20px;
 
+        &:not(:first-child) {
+          word-break: break-word;
+          min-width: 80px;
+        }
+
         &:nth-child(2) {
           display: flex;
           align-items: center;
