--- a/hrjobcontract/views/contractRevisionList.html
+++ b/hrjobcontract/views/contractRevisionList.html
@@ -61,7 +61,7 @@
             </ul>
         </div>
     </div>
-    <table class="table table-striped {{prefix}}table-sort {{prefix}}table-revision-list" hrjc-loader hrjc-loader-show="true">
+    <table class="table table-striped {{prefix}}table-sort {{prefix}}table-revision-list" hrjc-loader hrjc-loader-hide="true">
         <thead>
             <tr>
                 <th ng-hide="!display.effectiveDate"><a href="" ng-click="sortBy('revisionEntityIdObj.effective_date');createPage();">Effective Date <i class="fa"
