PCHR-1879: Fix to display specific revision modal view

--- a/hrjobcontract/views/modalRevision.html
+++ b/hrjobcontract/views/modalRevision.html
@@ -52,7 +52,7 @@
                             </tr>
                         </table>
                     </td>
-                    <td><a class="cursor-pointer" ng-click="modalContract('view',revisionListPage[$index])">view this contract revision</a></td>
+                    <td><a class="cursor-pointer" ng-click="modalContract('view',revisionData)">view this contract revision</a></td>
                 </tr>
             </tbody>
         </table>
