--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/main-menu/_main-menu.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/main-menu/_main-menu.scss
@@ -6,6 +6,7 @@
     background-color: $crm-white !important;
     line-height: 28px;
     height: 30px !important;
+    padding: 1px 3px 1px 2px;
 
     input {
       background-color: $crm-white;
